syntax = "proto3";

package user;

option go_package = "user-service/proto";

message User {
  int32 id = 1;
  string fname = 2;
  string city = 3;
  int64 phone = 4;
  float height = 5;
  bool married = 6;
}

message UserIDRequest {
  int32 id = 1;
}

message UserIDsRequest {
  repeated int32 ids = 1;
}

message UserList {
  repeated User users = 1;
}

message SearchRequest {
  string city = 1;
  int64 phone = 2;
  bool married = 3;
}

message Empty {}

service UserService {
  rpc GetUser(UserIDRequest) returns (User) {}
  rpc GetUsers(UserIDsRequest) returns (UserList) {}
  rpc SearchUsers(SearchRequest) returns (UserList) {}
  rpc AddUser(User) returns (Empty) {}
}
